test/parserTest/fail/test20.ic
class NestedArrays {
	int [] boolean [] string [] badArray;
}